# braincell

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  agent.md  changelog.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py  tmp_attach_matrix.json
braincell/: __init__.py  _base.py  _base_channel.py  _base_channel_test.py  _base_ion.py  _base_ion_test.py  _base_test.py  _integrator.py  _integrator_backward_euler.py  _integrator_dhs_utils.py  _integrator_diffrax.py  _integrator_exp_euler.py  _integrator_exp_euler_test.py  _integrator_implicit.py  _integrator_independent.py  _integrator_multicompartment.py  _integrator_protocol.py  _integrator_runge_kutta.py  _integrator_runge_kutta_test.py  _integrator_staggered.py  _integrator_util.py  _integrator_voltage_bwd_euler.py  _integrator_voltage_solver.py  _integrators.py  _integrators_diffrax.py  _integrators_exp_euler.py  _integrators_implicit.py  _integrators_implicit_euler.py  _integrators_runge_kutta.py  _integrators_util.py  _misc.py  _misc_test.py  _mod_conversion_pipeline_test.py  _morphology.py  _morphology_branch_tree.py  _morphology_branchtree.py  _morphology_dhs_utils.py  _morphology_from_asc.py  _morphology_from_swc.py  _morphology_nounit.py  (+23 more)
design/: cell.md  interface-map.md
dev/: MC.ipynb  benchmark_sparse_solver.py  from_swc.py  newton_test.ipynb
develop_doc/: cell.ipynb  cell.md  helper.py  io.ipynb  io.md  morpho-checkpoint.ipynb  morpho.ipynb  morpho.md  morphology.ipynb  neuromorpho.ipynb  neuromorpho_diff.ipynb  neuron_diff.ipynb  neuron_diff.py  neuron_diff_test.py  progress.md  quad.ipynb  requirement.md  todo.md  vis.ipynb
docs/: Makefile  architecture.xml  auto_generater.py  cell.md  conf.py  index.rst  interface-map.md  module-dependency-map.md  troubleshooting.md
examples/: 03_COBA_HH_2007_braincell.py  05_thalamus_single_compartment_neurons.py  MC11_simple_dendrite_model.py  MC11_simple_dendrite_model_fitting_by_adam.py  MC11_simple_dendrite_model_simulation.py  (+14 more)
(+1663 files in other folders)
