[build-system]
requires = [
    "setuptools>=45",
    "setuptools-scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "dev*",
    "develop*",
    "docs*",
    "build*",
    "dist*",
    "examples*",
    "legacy*",
    "braincell.egg-info*",
    "braincell/__pycache__*",
    "tests*"
]


[tool.setuptools.dynamic]
version = { attr = "braincell.__version__" }


[project]
name = "braincell"
description = "Biologically Detailed Brain Cell Modeling in JAX"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BrainCell Developers", email = "chao.brain@qq.com" }]
keywords = [
    "dendritic computation",
    "dendritic modeling",
    "brain modeling",
    "neuron simulation",
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.15",
    "brainunit>=0.0.8",
    "brainstate>=0.2.0",
    "brainevent>=0.0.7",
    "scipy",
    "brainpy>=2.7.5",
    "braintools>=0.1.0",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/chaobrain/braincell"
Documentation = "https://braincell.readthedocs.io/"
"Bug Tracker" = "https://github.com/chaobrain/braincell/issues"
"Source Code" = "https://github.com/chaobrain/braincell"


[project.optional-dependencies]
cpu = ["jax[cpu]"]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]
tpu = ["jax[tpu]"]
testing = ["pytest", "jax"]
